# fixed-point

./: .gitignore  CMakeLists.txt  README.md  fixp.c  fixp.h  main.c  makefile
incs/: custmath.h  stdtypes.h
test/: CMakeLists.txt  test.c
